--- a/style.css
+++ b/style.css
@@ -363,6 +363,7 @@ body {
   background-color: var(--Darkmagenta);
 }
 @media screen and (max-width: 700px) {
+  body{overflow:hidden;}
   button {
     height: 65px;
     width: 68px;
@@ -370,7 +371,7 @@ body {
     font-size: 30px;
   }
   .main {
-    margin-left: 0%;
+    margin-left: 1%;
     margin-top: 10%;
   }
 
